changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix a potential NULL dereference due to passing a potential NULL pointer to
qsort().
Arvid Norlander 2009-11-28

Fix uninitialised value on a empty attackmess file. The issue should never
happen in practice however.
Arvid Norlander 2009-11-28

Fix some dead initialisations (value assigned never used).
Arvid Norlander 2009-11-28

We already used the generic autoconf INSTALL. Update it to a newer version
(autoreconf automatically updated it).
Arvid Norlander 2009-11-28

Add missing prototype to include/sproto.h
Arvid Norlander 2009-11-28

Add correct text to highscore table for players disconnecting from the
game.
Andreas Kirschbaum 2009-11-22

Make utils/cre actually build and link.
Nicolas Weeger 2009-11-16

Not finding an archetype in second_arch_pass indicates a mistake in
 archetypes file, so it's better to just exit so it gets fixed instead
 of leading to issues later on.
Nicolas Weeger 2009-11-16

Rewrite hiscore.c module. Now the highscore file is read once when the
server is started and written whenever it changes. Adding new entries and
generating output for the 'hiscore command do not anymore read the
highscore file from disk.
Andreas Kirschbaum 2009-11-15

Remove support for undefined translations 'nl', 'de', and 'it'. Removes
some error messages at startup.
Andreas Kirschbaum 2009-11-14

Remove 'explore' mode.
Andreas Kirschbaum 2009-11-14

Fix formatting of 'hiscore' command output.
Andreas Kirschbaum 2009-11-13

Omit objects below the floor from the ground view.
Andreas Kirschbaum 2009-10-29
